fix: fix images not showing sometimes

--- a/src/routes/productPage/ProductPage.css
+++ b/src/routes/productPage/ProductPage.css
@@ -4,16 +4,22 @@
 }
 
 .ProductPage_Wrapper {
-  width: 100%;
-  height: fit-content;
-  margin: 0;
-  box-sizing: border-box;
   padding-top: 16px;
   padding-bottom: 16px;
+}
+
+.product_Image {
+  border: 2px solid #c5a47e;
+  width: 100%;
+  height: auto;
+  box-sizing: border-box;
+}
+
+.gridItem_Information {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  gap: 8px;
+  gap: 12px;
 }
 
 .title_Container {
@@ -36,7 +42,7 @@
   gap: 16px;
 }
 
-.info_Container {
+.details_Container {
   width: 100%;
   height: fit-content;
   margin: 0;
@@ -52,10 +58,6 @@
   gap: 6px;
 }
 
-.product_Image {
-  border: 2px solid #c5a47e;
-}
-
 .description_Container {
   width: 100%;
   height: fit-content;
@@ -67,4 +69,5 @@
   display: flex;
   flex-direction: column;
   gap: 16px;
+  margin-top: 12px;
 }
